force-app/main/default/objects/Case/fields/Planet__c.field-meta.xml
<CustomField>
  <deleteConstraint>SetNull</deleteConstraint>
  <description>A lookup relationship to the Planet custom object.</description>
  <fullName>Planet__c</fullName>
  <inlineHelpText>A lookup relationship to the Planet custom object.</inlineHelpText>
  <label>Planet</label>
  <referenceTo>Planet__c</referenceTo>
  <relationshipLabel>Cases</relationshipLabel>
  <relationshipName>Cases</relationshipName>
  <type>Lookup</type>
</CustomField>