force-app/main/default/objects/Case/fields/Successful_Scan__c.field-meta.xml
<CustomField>
  <defaultValue>false</defaultValue>
  <description>Stores if Baby Yoda was found in the related Planet.</description>
  <fullName>Successful_Scan__c</fullName>
  <inlineHelpText>Stores if Baby Yoda was found in the related Planet.</inlineHelpText>
  <label>Successful Scan</label>
  <type>Checkbox</type>
</CustomField>