force-app/main/default/objects/Case/listViews/AllClosedCases.listView-meta.xml
<ListView>
  <columns>CASES.CASE_NUMBER</columns>
  <columns>CASES.CREATED_DATE</columns>
  <columns>CASES.PRIORITY</columns>
  <columns>CASES.STATUS</columns>
  <columns>CASES.SUBJECT</columns>
  <columns>CORE.USERS.ALIAS</columns>
  <columns>NAME</columns>
  <filterScope>Everything</filterScope>
  <filters>
    <field>CASES.CLOSED</field>
    <operation>equals</operation>
    <value>1</value>
  </filters>
  <fullName>AllClosedCases</fullName>
  <label>All Closed Cases</label>
</ListView>