force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
  <filterScope>Everything</filterScope>
  <filters>
    <field>CASES.CLOSED</field>
    <operation>equals</operation>
    <value>0</value>
  </filters>
  <fullName>AllOpenCases</fullName>
  <label>All Open Cases</label>
</ListView>