force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
  <filterScope>Mine</filterScope>
  <fullName>MyCases</fullName>
  <label>My Cases</label>
</ListView>