force-app/main/default/objects/Case/listViews/MyOpenCases.listView-meta.xml
<ListView>
  <filterScope>Mine</filterScope>
  <filters>
    <field>CASES.CLOSED</field>
    <operation>equals</operation>
    <value>0</value>
  </filters>
  <fullName>MyOpenCases</fullName>
  <label>My Open Cases</label>
</ListView>